# token-optimizer

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  config.toml.example
src/: ai_client.rs  clipboard.rs  config.rs  hotkeys.rs  main.rs
